Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypeObjPriTextRetboolean.quorum
class Main
    action Main
        Text one
        one:SetValue("green")
        text two = "green"
        Yoda<Text, text, boolean> yoda
        boolean ret = yoda:useForce(one, two)
        output "passed"
     end
end
