Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypePriPriTextRetTextObjFail.quorum
class Main
    action Main
        text one = "green"
        text two = "green"
        Yoda<text, text, Text> yoda
        boolean wrongRet = yoda(one, two)
     end
end
